# SDA-project

./: .dockerignore  .gitignore  Dockerfile  README.md  imports.txt  main.py  pyproject.toml
.devcontainer/: devcontainer.json
Dataset/: Dataset.txt  analyse.py  calculate_risk.py  cleanup_data.py  cleanup_data_blitz.py  games_cleaned.csv  mock_chess_games_cleaned.csv  mock_games_cleaned.csv  risk2.py  risk_termination_elo.py
Plots/: key_findings_affect_of_risk_per_elo.md  key_findings_openings.md  mnlogit_summary.txt  tukey_summary.txt
Tests/: ht_test.ipynb  test_opening_analysis.py
app/: affect_of_risk_per_elo.py  ht_test.ipynb  opening_risk_analysis.py
